# tcg-shadowbox-generator

./: .gitignore  CLAUDE.md  README.md  README_ja.md  pyproject.toml
docs/: detection_methods.md
notebooks/: 01_quickstart.ipynb
src/shadowbox/: __init__.py  factory.py
src/shadowbox/config/: __init__.py  loader.py  settings.py  template.py
src/shadowbox/core/: __init__.py  back_panel_factory.py  depth.py  depth_to_mesh.py  frame_factory.py  mesh.py  pipeline.py
src/shadowbox/depth/: __init__.py  pipeline.py
src/shadowbox/detection/: __init__.py  region.py
src/shadowbox/gui/: __init__.py  app.py  i18n.py  image_selector.py  processing.py  region_selector.py  settings_bridge.py  template_editor.py  theme.py
src/shadowbox/gui/widgets/: __init__.py  action_buttons.py  frame_tab.py  image_preview.py  layers_tab.py  legend_overlay.py  processing_tab.py  rendering_tab.py  settings_panel.py
src/shadowbox/triposr/: __init__.py  depth_recovery.py  generator.py  mesh_splitter.py  pipeline.py  settings.py
src/shadowbox/utils/: __init__.py
src/shadowbox/visualization/: __init__.py  export.py  heatmap.py  layers.py  render.py
tests/: __init__.py  conftest.py  test_back_panel_factory.py  test_config.py  test_depth.py  test_depth_recovery.py  test_depth_to_mesh.py  test_detection.py  test_frame_factory.py  test_image_selector.py  test_mesh.py  test_pipeline.py  test_render.py  test_settings_bridge.py  test_triposr.py  test_visualization.py
tests/test_gui/: conftest.py  test_app.py  test_frame_tab.py  test_i18n.py  test_image_preview.py  test_layers_tab.py  test_legend_overlay.py  test_processing_tab.py  test_processing_thread.py  test_region_selector.py  test_rendering_tab.py  test_settings_bridge.py  test_settings_panel.py
